# opencli

./: .all-contributorsrc  .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  Cargo.toml  DOC  Dockerfile  Makefile  README.md  deny.toml  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build.yml  contributors.yml  release.yml  test.yml
docs/: CONTRIBUTING.md  DOCKER.md  compiler-options.md
scripts/: check.bat  check.py  check.sh  format.bat  format.py  format.sh  setup-test-scenarios.bat  setup-test-scenarios.py  setup-test-scenarios.sh  test.bat  test.py  test.sh
src/: cache.rs  lib.rs  main.rs  result.rs  security.rs
src/cli/: mod.rs  parser.rs
src/commands/: build.rs  install.rs  mod.rs  run.rs  setup.rs
src/compiler/: config.rs  downloader.rs  manager.rs  mod.rs
src/package/: config_manager.rs  downloader.rs  lock.rs  manager.rs  mod.rs  version.rs  workspace.rs
src/utils/: process.rs
translate/german-de/: README.md
translate/indonesia-id/: README.md
translate/russian-ru/: README.md
