[package]
name = "opencli"
version = "0.1.0"
edition = "2021"
authors = ["mxp96"]
description = "CLI tool for open.mp server management"
license = "MIT"

[[bin]]
name = "opencli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", default-features = false, features = ["derive", "std", "help", "usage"] }
tokio = { version = "1.0", default-features = false, features = ["rt", "fs", "process", "macros", "io-util"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "1.0"
which = "6.0"
toml = { version = "0.9", default-features = false, features = ["parse", "display"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
octocrab = { version = "0.47.0", default-features = false, features = ["rustls", "default-client"] }
zip = { version = "5.0", default-features = false, features = ["deflate"] }
tar = { version = "0.4", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
regex = { version = "1.10", default-features = false, features = ["std"] }
dirs = "6.0"
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
once_cell = "1.19"
smol_str = { version = "0.3", features = ["serde"] }
camino = { version = "1.1", features = ["serde1"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false }
sha2 = "0.10"
indicatif = "0.18"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
rpath = false

[profile.dev]
opt-level = 1
lto = "thin"

[profile.test]
lto = "thin"

[profile.bench]
lto = "fat"

[profile.min-size]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
